--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <img src="./Photos/cupcakeimage.png" alt="mainimage" width="777px" height="800px" id="mainimage">
 <div class="title">
     <h1> Delicious cupcakes <br> from <span>CupYork</span></h1>
+    <br> <br>
+    <h3>You beautiful and deserve delicious cupcakes. Buy it now and enjoy the tenderness!</h3>
 </div>
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </body>
